--- a/2/index.html
+++ b/2/index.html
@@ -7,16 +7,18 @@
 </head>
 <body>
   <header class="page-header">
-    <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    <a class="navigation-logo" href="index.html">
+      <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    </a>
     <nav class="main-navigation">
-      <form class="search-form" action='#' method="post">
+      <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
         <input name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
-        <input name="search" type="submit" id='search-id' value="Найти">
+        <input name="search" type="submit" id="search-id" value="Найти">
       </form>
-        <button name="button log-on" type="button">
-          <span class="log-on-span">Войти</span>
-        </button>
+      <button name="button log-on" type="button">
+        <span class="log-on-span">Войти</span>
+      </button>
       <a class="compare" href="#">Сравнить</a>
       <a class="shopping-cart" href="#">Корзина</a>
 
@@ -38,7 +40,7 @@
   </header>
 
   <main class="main-index">
-      <h1 class="visually-hidden">«Девайс» интернет-магазин электроники</h1>
+    <h1 class="visually-hidden">«Девайс» интернет-магазин электроники</h1>
 
     <section class="best_products">
       <h2 class="visually-hidden">Лучшие товары магазина</h2>
@@ -49,46 +51,46 @@
         <span class="visually-hidden">Следующее фото</span>
       </button>
       <div class="slider-quadcopter">
-          <h3 class="visually-hidden">Товар Квадрокоптер</h3>
-          <img src='#' alt="Квадрокоптер">
-          <p class="slider-title">Порхает как бабочка, <br> жалит как пчела!<br></p>
-          <p class="slider-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
-            замаскированным под стандартную камеру.</p>
-          <a class="button" href="#">ПОДРОБНЕЕ</a>
-          <dl class="quadcopter-list">
-            <dt class="quadcopter-term">Дальность полета</dt>
-              <dd class="quadcopter-def">800 м</dd>
-            <dt class="quadcopter-term">Радиус поражения</dt>
-              <dd class="quadcopter-def">50 м</dd>
-          </dl>
+        <h3 class="visually-hidden">Товар Квадрокоптер</h3>
+        <img src="#" alt="Квадрокоптер">
+        <p class="slider-title">Порхает как бабочка, <br> жалит как пчела!<br></p>
+        <p class="slider-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
+          замаскированным под стандартную камеру.</p>
+        <a class="button" href="#">ПОДРОБНЕЕ</a>
+        <dl class="quadcopter-list">
+          <dt class="quadcopter-term">Дальность полета</dt>
+          <dd class="quadcopter-def">800 м</dd>
+          <dt class="quadcopter-term">Радиус поражения</dt>
+          <dd class="quadcopter-def">50 м</dd>
+        </dl>
       </div>
       <div class="slider-watch">
-          <h3 class="visually-hidden">Товар Фитнес-браслет</h3>
-          <img src='#' alt="Фитнес-браслет">
-          <p class="slider-title">Худеем<br>правильно!</p>
-          <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
-            соблюдать диету.</p>
-          <a class="button" href="#">ПОДРОБНЕЕ</a>
-          <dl class="quadcopter-list">
-            <dt class="quadcopter-term">48 часов</dt>
-            <dd class="quadcopter-def">Без подзарядки</dd>
-          </dl>
+        <h3 class="visually-hidden">Товар Фитнес-браслет</h3>
+        <img src="#" alt="Фитнес-браслет">
+        <p class="slider-title">Худеем<br>правильно!</p>
+        <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
+          соблюдать диету.</p>
+        <a class="button" href="#">ПОДРОБНЕЕ</a>
+        <dl class="quadcopter-list">
+          <dt class="quadcopter-term">48 часов</dt>
+          <dd class="quadcopter-def">Без подзарядки</dd>
+        </dl>
       </div>
       <div class="slider-selfies">
-          <h3 class="visually-hidden">Товар Палка для селфи</h3>
-          <img src='#' alt="Палка для селфи">
-          <p class="slider-title">Делай селфи,<br>как Бен Стиллер! </p>
-          <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
-            метров длиной и весом всего 5 кг.</p>
-          <a class="button" href="catalog.html">ПОДРОБНЕЕ</a>
-          <dl class="selfies-list">
-            <dt class="selfies-term">Длина палки</dt>
-            <dd class="selfies-def">8,5 м</dd>
-            <dt class="selfies-term">Вес палки</dt>
-            <dd class="selfies-def">5 кг</dd>
-            <dt class="selfies-term">Материал</dt>
-            <dd class="selfies-def">Карбон</dd>
-          </dl>
+        <h3 class="visually-hidden">Товар Палка для селфи</h3>
+        <img src="#" alt="Палка для селфи">
+        <p class="slider-title">Делай селфи,<br>как Бен Стиллер! </p>
+        <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
+          метров длиной и весом всего 5 кг.</p>
+        <a class="button" href="catalog.html">ПОДРОБНЕЕ</a>
+        <dl class="selfies-list">
+          <dt class="selfies-term">Длина палки</dt>
+          <dd class="selfies-def">8,5 м</dd>
+          <dt class="selfies-term">Вес палки</dt>
+          <dd class="selfies-def">5 кг</dd>
+          <dt class="selfies-term">Материал</dt>
+          <dd class="selfies-def">Карбон</dd>
+        </dl>
       </div>
       <ol class="slider-pagination">
         <li class="slider-pagination-item">
@@ -105,137 +107,137 @@
           <button class="slider-pagination-button" type="button">
             <span class="visually-hidden">3 фото</span>
           </button>
-        </li>>
+        </li>
       </ol>
     </section>
 
-      <section class="product-category">
-        <h2 class="visually-hidden">Категории товаров магазина</h2>
-        <ul class="products-list">
-          <li class="products-item">
-            <a class="product-category-link" href="#">
-              <h3 class="product-category-subtitle">Виртуальная<br>
-                реальность</h3>
-            <img src="#" width="160" height="160" alt='Виртуальная реальность'>
-            </a>
-          </li>
-          <li class="products-item">
-            <a class="product-category-link" href="catalog.html">
-              <h3 class="product-category-subtitle">Моноподы<br>
-                для селфи</h3>
-              <img src="#" width="160" height="160" alt='Моноподы для селфи'>
-            </a>
-          </li>
-          <li class="products-item">
-            <a class="product-category-link" href="#">
-              <h3 class="product-category-subtitle">Экшн-камеры</h3>
-              <img src="#" width="160" height="160" alt='Экшн-камеры'>
-            </a>
-          </li>
-          <li class="products-item">
-            <a class="product-category-link" href="#">
-              <h3 class="product-category-subtitle">Фитнес-браслеты</h3>
-              <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
-            </a>
-          </li>
-          <li class="products-item">
-            <a class="product-category-link" href="#">
-              <h3 class="product-category-subtitle">Умные часы</h3>
-              <img src="#" width="160" height="160" alt='Умные часы'>
-            </a>
-          </li>
-          <li class="products-item">
-            <a class="product-category-link" href="#">
-              <h3 class="product-category-subtitle">Квадрокоптеры</h3>
-              <img src="#" width="160" height="160" alt='Квадрокоптеры'>
-            </a>
-          </li>
-        </ul>
-      </section>
+    <section class="product-category">
+      <h2 class="visually-hidden">Категории товаров магазина</h2>
+      <ul class="products-list">
+        <li class="products-item">
+          <a class="product-category-link" href="#">
+            <h3 class="product-category-subtitle">Виртуальная<br>
+              реальность</h3>
+            <img src="#" width="160" height="160" alt="Виртуальная реальность">
+          </a>
+        </li>
+        <li class="products-item">
+          <a class="product-category-link" href="catalog.html">
+            <h3 class="product-category-subtitle">Моноподы<br>
+              для селфи</h3>
+            <img src="#" width="160" height="160" alt="Моноподы для селфи">
+          </a>
+        </li>
+        <li class="products-item">
+          <a class="product-category-link" href="#">
+            <h3 class="product-category-subtitle">Экшн-камеры</h3>
+            <img src="#" width="160" height="160" alt="Экшн-камеры">
+          </a>
+        </li>
+        <li class="products-item">
+          <a class="product-category-link" href="#">
+            <h3 class="product-category-subtitle">Фитнес-браслеты</h3>
+            <img src="#" width="160" height="160" alt="Фитнес-браслеты">
+          </a>
+        </li>
+        <li class="products-item">
+          <a class="product-category-link" href="#">
+            <h3 class="product-category-subtitle">Умные часы</h3>
+            <img src="#" width="160" height="160" alt="Умные часы">
+          </a>
+        </li>
+        <li class="products-item">
+          <a class="product-category-link" href="#">
+            <h3 class="product-category-subtitle">Квадрокоптеры</h3>
+            <img src="#" width="160" height="160" alt="Квадрокоптеры">
+          </a>
+        </li>
+      </ul>
+    </section>
 
-      <section class="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
-          <li>
-            <h3 class="advantages-item">Доставка</h3>
-            <button class="advantages-item-button" type="button">
-              <span class="delivery-icon">Доставка</span>
-            </button>
-            <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
-              к вашему подъезду совершенно бесплатно! Ведь
-              мы неплохо заработаем, поднимая его на ваш этаж.</p>
-          </li>
-          <li>
-            <button class="advantages-item-button" type="button">
-              <span class="warranty-icon">Гарантия</span>
-            </button>
-            <h3 class="advantages-item">Гарантия</h3>
-            <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас
-              сгорит дом — не переживайте, мы выдадим вам новый.
-              Товар, не дом, конечно же.</p>
-          </li>
-          <li>
-            <button class="advantages-item-button" type="button">
-              <span class="credit-icon">Кредит</span>
-            </button>
-            <h3 class="advantages-item">Кредит</h3>
-            <p class="advantages-description">Залезть в долговую яму стало проще!
-              Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-          </li>
-        </ul>
-      </section>
+    <section class="advantages">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <ul class="advantages-list">
+        <li>
+          <button class="advantages-item-button" type="button">
+            <span class="delivery-icon">Доставка</span>
+          </button>
+          <h3 class="advantages-item">Доставка</h3>
+          <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
+            к вашему подъезду совершенно бесплатно! Ведь
+            мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        </li>
+        <li>
+          <button class="advantages-item-button" type="button">
+            <span class="warranty-icon">Гарантия</span>
+          </button>
+          <h3 class="advantages-item">Гарантия</h3>
+          <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас
+            сгорит дом — не переживайте, мы выдадим вам новый.
+            Товар, не дом, конечно же.</p>
+        </li>
+        <li>
+          <button class="advantages-item-button" type="button">
+            <span class="credit-icon">Кредит</span>
+          </button>
+          <h3 class="advantages-item">Кредит</h3>
+          <p class="advantages-description">Залезть в долговую яму стало проще!
+            Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+        </li>
+      </ul>
+    </section>
 
-      <div class="scarce-commodity">
-          <a class="delivery-special-offer" href="#">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</a>
-      </div>
+    <div class="scarce-commodity">
+      <a class="delivery-special-offer" href="#">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</a>
+    </div>
 
-      <section class="companies">
-        <h2 class="companies-title">О нас</h2>
-        <p class="companies-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из
-          нас.<br>
-          Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-        <ul class="companies-list">
-          <li class="companies-item"><b>Меловые линии</b></li>
-          <li class="companies-item"><b>СДИК</b></li>
-          <li class="companies-item"><b>ТоксБерри</b></li>
-        </ul>
-        <a class="button" href='#'>ПОДРОБНЕЕ О НАС</a>
-      </section>
-      <section class="contacts">
-        <h2 class="contacts-title">Контакты</h2>
-        <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис.</p>
-        <p class="contacts-description">Заодно сможете проверить работоспособность покупки. </p>
-        <h3>Интернет-магазин «Девайс»</h3>
-        <address class="contacts-address">
-          <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        </address>
-        <h3 class="contacts-subtitle">Время работы</h3>
-        <ul class="contacts-schedule">
-          <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
-          <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
-        </ul>
-        <a class="button" href="#">НАПИШИТЕ НАМ</a>
-      </section>
-      <section class="newsletter">
-        <h2 class="newsletter-title">Подпишитесь<br>
-          на рассылку</h2>
-        <p class="newsletter-description">Еженедельный дайджест с обзорами новинок,<br>
-          длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
-        <p class="newsletter-tick">Это бесплатно</p>
-        <form class="newsletter-subscriber" action="#" method="post">
-          <input type="email" name="newsletter-email" id='newsletter-mail' placeholder="Ваш e-mail">
-          <input type="submit" value="ПОДПИСАТЬСЯ">
-        </form>
-      </section>
-    </main>
+    <section class="companies">
+      <h2 class="companies-title">О нас</h2>
+      <p class="companies-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из
+        нас.<br>
+        Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+      <ul class="companies-list">
+        <li class="companies-item"><b>Меловые линии</b></li>
+        <li class="companies-item"><b>СДИК</b></li>
+        <li class="companies-item"><b>ТоксБерри</b></li>
+      </ul>
+      <a class="button" href="#">ПОДРОБНЕЕ О НАС</a>
+    </section>
+    <section class="contacts">
+      <h2 class="contacts-title">Контакты</h2>
+      <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис.</p>
+      <p class="contacts-description">Заодно сможете проверить работоспособность покупки. </p>
+      <h3>Интернет-магазин «Девайс»</h3>
+      <address class="contacts-address">
+        <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </address>
+      <h3 class="contacts-subtitle">Время работы</h3>
+      <ul class="contacts-schedule">
+        <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
+        <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
+      </ul>
+      <a class="button" href="#">НАПИШИТЕ НАМ</a>
+    </section>
+    <section class="newsletter">
+      <h2 class="newsletter-title">Подпишитесь<br>
+        на рассылку</h2>
+      <p class="newsletter-description">Еженедельный дайджест с обзорами новинок,<br>
+        длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+      <p class="newsletter-tick">Это бесплатно</p>
+      <form class="newsletter-subscriber" action="https://echo.htmlacademy.ru/" method="post">
+        <input type="email" name="newsletter-email" id="newsletter-mail" placeholder="Ваш e-mail">
+        <input type="submit" value="ПОДПИСАТЬСЯ">
+      </form>
+    </section>
+  </main>
 
   <footer class="main-footer">
-    <h2 class="visually-hidden">Давайте дружить</h2>
     <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
       <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
-      реки Карповки, 5, литера П.</p>
+        реки Карповки, 5, литера П.</p>
       <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
     </address>
     <ul class="navigation-menu menu-footer">
@@ -266,6 +268,6 @@
       </li>
     </ul>
     <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">.html academy</a>
-</footer>
+  </footer>
 </body>
 </html>
