Добавляет оптимизированные картинки на главной и в каталоге, и задает ширину и высоту.

--- a/catalog.html
+++ b/catalog.html
@@ -119,7 +119,7 @@
       <ol class="product-list">
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="#" alt="Любительская селфи-палка">
+            <img class="product-card-image" src="images/selfies-catalog/amateur-selfies.jpg" width="360" height="380" alt="Любительская селфи-палка">
             <h3 class="product-card-title">Любительская<br>
               селфи-палка</h3>
           </a>
@@ -128,7 +128,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="#" alt="Профессиональная селфи-палка">
+            <img class="product-card-image" src="images/selfies-catalog/professional-selfies.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             <h3 class="product-card-title">Профессиональная селфи-палка</h3>
           </a>
           <span class="product-card-price">1 500 ₽</span>
@@ -136,7 +136,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="#" alt="Непотопляемая селфи-палка">
+            <img class="product-card-image" src="images/selfies-catalog/unsinkable-selfies.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             <h3 class="product-card-title">Непотопляемая<br>
               селфи-палка</h3>
           </a>
@@ -145,7 +145,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="#" alt="Селфи-палка «Следуй за мной»">
+            <img class="product-card-image" src="images/selfies-catalog/follow-me-selfies.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
           </a>
           <span class="product-card-price">1 500 ₽</span>
