--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </button>
       <div class="slider-quadcopter">
         <h3 class="visually-hidden">Товар Квадрокоптер</h3>
-        <img src="#" alt="Квадрокоптер">
+        <img src="images/slider/quadcopter.png" width="560" height="560" alt="Квадрокоптер">
         <p class="slider-title">Порхает как бабочка, <br> жалит как пчела!<br></p>
         <p class="slider-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
           замаскированным под стандартную камеру.</p>
@@ -65,7 +65,7 @@
       </div>
       <div class="slider-watch">
         <h3 class="visually-hidden">Товар Фитнес-браслет</h3>
-        <img src="#" alt="Фитнес-браслет">
+        <img src="images/slider/fitness-bracelet.png" width="560" height="560" alt="Фитнес-браслет">
         <p class="slider-title">Худеем<br>правильно!</p>
         <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
           соблюдать диету.</p>
@@ -77,7 +77,7 @@
       </div>
       <div class="slider-selfies">
         <h3 class="visually-hidden">Товар Палка для селфи</h3>
-        <img src="#" alt="Палка для селфи">
+        <img src="images/slider/selfie-stick.png" width="560" height="560" alt="Палка для селфи">
         <p class="slider-title">Делай селфи,<br>как Бен Стиллер! </p>
         <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
           метров длиной и весом всего 5 кг.</p>
