Добавляет закрытый тег в футоре.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <header class="page-header">
@@ -248,6 +249,7 @@
       </li>
       <li class="contacts-navigation-item menu-footer-item">
         <a class="contacts-navigation-link menu-footer-link" href="#">Контакты</a>
+      </li>
     </ul>
     <ul class="footer-social-list">
       <li class="footer-social-item">
