Добавляет все отформатированные иконки; Добавляет к ним путь, в атрибутах указывается ширина, высота, алт.

--- a/catalog.html
+++ b/catalog.html
@@ -7,22 +7,29 @@
 <body>
   <header class="page-header">
     <a class="navigation-logo" href="index.html">
-      <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+      <img class="logo" src="images/logo-device.svg" width="145" height="37" alt="Логотип интернет-магазина «Девайс»">
     </a>
     <nav class="main-navigation">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-        <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
+        <label for="catalogue-search" class="visually-hidden">
+          <img src="images/icons/search.svg" width="16" height="16" alt="Текст поиска">
+        </label>
         <input name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
         <input name="search" type="submit" id="search-id" value="Найти">
       </form>
       <button name="button log-on" type="button">
         <span class="log-on-span">Войти</span>
+        <img class="login-icon" src="images/icons/login.svg" width="13" height="12" alt="#">
       </button>
-      <a class="compare" href="#">Сравнить</a>
-      <a class="shopping-cart" href="#">Корзина</a>
+      <a class="compare" href="#">Сравнить
+        <img class="sort-icon" src="images/icons/sort.svg" width="10" height="12" alt="#">
+      </a>
+      <a class="shopping-cart" href="#">Корзина
+        <img class="cart-icon" src="images/icons/cart.svg" width="16" height="14" alt="#">
+      </a>
 
       <button class="button button-search" type="button">
-        <span class="visually-hidden">КАТАЛОГ ТОВАРОВ</span>
+        <span class="catalogue-button">КАТАЛОГ ТОВАРОВ</span>
       </button>
       <ul class="navigation-menu">
         <li class="navigation-menu-item">
@@ -105,21 +112,26 @@
       </form>
 
       <select class="select-control" aria-label="Сортировка">
+        <button class="select-button" type="button">
+          <img class="arron-left-icon" src="images/icons/arrow-down.svg" width="12" height="7" alt="Отсортировать">
+        </button>
         <option value="popular">Популярное</option>
         <option value="new-products">Новинки</option>
         <option value="price">Цена</option>
       </select>
-      <a href="#" class="button button-light">
-        <span class="visually-hidden">От наилучших</span>
+      <a class="button button-light" href="#">
+<!--        <span class="visually-hidden">От наилучших</span>-->
+        <img src="images/icons/arrow-up-bold.svg" width="11" height="10" alt="От наилучших">
       </a>
-      <a class="button" href="#">
-        <span class="visually-hidden">От наихудших</span>
+      <a class="button button-light" href="#">
+<!--        <span class="visually-hidden">От наихудших</span>-->
+        <img src="images/icons/arrow-down-bold.svg" width="11" height="10" alt="От наихудших">
       </a>
 
       <ol class="product-list">
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/selfies-catalog/amateur-selfies.jpg" width="360" height="380" alt="Любительская селфи-палка">
+            <img class="product-card-image" src="images/catalog/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             <h3 class="product-card-title">Любительская<br>
               селфи-палка</h3>
           </a>
@@ -128,7 +140,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/selfies-catalog/professional-selfies.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+            <img class="product-card-image" src="images/catalog/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             <h3 class="product-card-title">Профессиональная селфи-палка</h3>
           </a>
           <span class="product-card-price">1 500 ₽</span>
@@ -136,7 +148,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/selfies-catalog/unsinkable-selfies.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+            <img class="product-card-image" src="images/catalog/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             <h3 class="product-card-title">Непотопляемая<br>
               селфи-палка</h3>
           </a>
@@ -145,7 +157,7 @@
         </li>
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/selfies-catalog/follow-me-selfies.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+            <img class="product-card-image" src="images/catalog/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
           </a>
           <span class="product-card-price">1 500 ₽</span>
@@ -185,7 +197,7 @@
   </main>
 
   <footer class="main-footer">
-    <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    <img class="logo" src="images/logo-yellow.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
     <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
       <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
@@ -206,21 +218,26 @@
     <ul class="footer-social-list">
       <li class="footer-social-item">
         <a class="button" href="https://t.me/htmlacademy" target="_blank">
-          <span class="visually-hidden">Telegram</span>
+          <!--          <span class="visually-hidden">Telegram</span>-->
+          <img src="images/icons/telegram.svg" width="14" height="12" alt="Наш телеграмм">
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
-          <span class="visually-hidden">YouTube</span>
+          <!--          <span class="visually-hidden">YouTube</span>-->
+          <img src="images/icons/youtube.svg" width="16" height="11" alt="Наш Ютуб">
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://twitter.com/htmlacademy_ru" target="_blank">
-          <span class="visually-hidden">Twitter</span>
+          <!--          <span class="visually-hidden">Twitter</span>-->
+          <img src="images/icons/twitter.svg" width="16" height="14" alt="Наш Твиттер">
         </a>
       </li>
     </ul>
-    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">.html academy</a>
+    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">
+      <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="#">
+    </a>
   </footer>
 </body>
 </html>
