--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
 <body>
   <header class="page-header">
     <a class="navigation-logo" href="index.html">
-      <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+      <img class="logo" src="images/logo-device.svg" width="145" height="37" alt="Логотип интернет-магазина «Девайс»">
     </a>
     <nav class="main-navigation">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-        <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
+        <label for="catalogue-search" class="visually-hidden">
+          <img src="images/icons/search.svg" width="16" height="16" alt="Текст поиска">
+        </label>
         <input name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
         <input name="search" type="submit" id="search-id" value="Найти">
       </form>
       <button name="button log-on" type="button">
         <span class="log-on-span">Войти</span>
+        <img class="login-icon" src="images/icons/login.svg" width="13" height="12" alt="#">
       </button>
-      <a class="compare" href="#">Сравнить</a>
-      <a class="shopping-cart" href="#">Корзина</a>
+      <a class="compare" href="#">Сравнить
+        <img class="sort-icon" src="images/icons/sort.svg" width="10" height="12" alt="#">
+      </a>
+      <a class="shopping-cart" href="#">Корзина
+        <img class="cart-icon" src="images/icons/cart.svg" width="16" height="14" alt="#">
+      </a>
 
       <button class="button button-search" type="button">
         <span class="catalogue-button">КАТАЛОГ ТОВАРОВ</span>
@@ -46,9 +53,11 @@
       <h2 class="visually-hidden">Лучшие товары магазина</h2>
       <button class="slider-button slider-prev" type="button">
         <span class="visually-hidden">Предыдущее фото</span>
+        <img class="arron-left-icon" src="images/icons/left-tall-arrow.svg" width="20" height="61" alt="#">
       </button>
       <button class="slider-button slider-next" type="button">
         <span class="visually-hidden">Следующее фото</span>
+        <img class="arron-right-icon" src="images/icons/right-tall-arrow.svg" width="20" height="61" alt="#">
       </button>
       <div class="slider-quadcopter">
         <h3 class="visually-hidden">Товар Квадрокоптер</h3>
@@ -118,38 +127,38 @@
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Виртуальная<br>
               реальность</h3>
-            <img src="#" width="160" height="160" alt="Виртуальная реальность">
+            <img src="images/category/category-1.svg" width="160" height="160" alt="Виртуальная реальность">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="catalog.html">
             <h3 class="product-category-subtitle">Моноподы<br>
               для селфи</h3>
-            <img src="#" width="160" height="160" alt="Моноподы для селфи">
+            <img src="images/category/category-2.svg" width="160" height="160" alt="Моноподы для селфи">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Экшн-камеры</h3>
-            <img src="#" width="160" height="160" alt="Экшн-камеры">
+            <img src="images/category/category-3.svg" width="160" height="160" alt="Экшн-камеры">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Фитнес-браслеты</h3>
-            <img src="#" width="160" height="160" alt="Фитнес-браслеты">
+            <img src="images/category/category-4.svg" width="160" height="160" alt="Фитнес-браслеты">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Умные часы</h3>
-            <img src="#" width="160" height="160" alt="Умные часы">
+            <img src="images/category/category-5.svg" width="160" height="160" alt="Умные часы">
           </a>
         </li>
         <li class="products-item">
           <a class="product-category-link" href="#">
             <h3 class="product-category-subtitle">Квадрокоптеры</h3>
-            <img src="#" width="160" height="160" alt="Квадрокоптеры">
+            <img src="images/category/category-6.svg" width="160" height="160" alt="Квадрокоптеры">
           </a>
         </li>
       </ul>
@@ -166,6 +175,7 @@
           <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
             к вашему подъезду совершенно бесплатно! Ведь
             мы неплохо заработаем, поднимая его на ваш этаж.</p>
+          <img src="images/delivery-1.svg" width="136" height="165" alt="#">
         </li>
         <li>
           <button class="advantages-item-button" type="button">
@@ -175,6 +185,7 @@
           <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас
             сгорит дом — не переживайте, мы выдадим вам новый.
             Товар, не дом, конечно же.</p>
+          <img src="images/warranty-2.svg" width="171" height="195" alt="#">
         </li>
         <li>
           <button class="advantages-item-button" type="button">
@@ -183,12 +194,16 @@
           <h3 class="advantages-item">Кредит</h3>
           <p class="advantages-description">Залезть в долговую яму стало проще!
             Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+          <img src="images/credit-3.svg" width="156" height="189" alt="#">
         </li>
       </ul>
     </section>
 
     <div class="scarce-commodity">
-      <a class="delivery-special-offer" href="#">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</a>
+      <a class="delivery-special-offer" href="#">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ
+        <img src="images/icons/delivery.svg" width="47" height="32" alt="#">
+        <img src="images/icons/i.svg" width="2" height="12" alt="#">
+      </a>
     </div>
 
     <section class="companies">
@@ -224,7 +239,9 @@
         на рассылку</h2>
       <p class="newsletter-description">Еженедельный дайджест с обзорами новинок,<br>
         длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
-      <p class="newsletter-tick">Это бесплатно</p>
+      <p class="newsletter-tick">Это бесплатно
+       <img src="images/icons/tick-big.svg" width="14" height="14" alt="#">
+      </p>
       <form class="newsletter-subscriber" action="https://echo.htmlacademy.ru/" method="post">
         <input type="email" name="newsletter-email" id="newsletter-mail" placeholder="Ваш e-mail">
         <input type="submit" value="ПОДПИСАТЬСЯ">
@@ -233,7 +250,7 @@
   </main>
 
   <footer class="main-footer">
-    <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    <img class="logo" src="images/logo-yellow.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
     <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
       <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
@@ -254,21 +271,26 @@
     <ul class="footer-social-list">
       <li class="footer-social-item">
         <a class="button" href="https://t.me/htmlacademy" target="_blank">
-          <span class="visually-hidden">Telegram</span>
+<!--          <span class="visually-hidden">Telegram</span>-->
+          <img src="images/icons/telegram.svg" width="14" height="12" alt="Наш телеграмм">
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
-          <span class="visually-hidden">YouTube</span>
+<!--          <span class="visually-hidden">YouTube</span>-->
+          <img src="images/icons/youtube.svg" width="16" height="11" alt="Наш Ютуб">
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://twitter.com/htmlacademy_ru" target="_blank">
-          <span class="visually-hidden">Twitter</span>
+<!--          <span class="visually-hidden">Twitter</span>-->
+          <img src="images/icons/twitter.svg" width="16" height="14" alt="Наш Твиттер">
         </a>
       </li>
     </ul>
-    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">.html academy</a>
+    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">
+      <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="#">
+    </a>
   </footer>
 </body>
 </html>
