--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс-каталог</title>
+  <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
   <header class="page-header">
@@ -201,7 +202,9 @@
     <h2 class="visually-hidden">Давайте дружить</h2>
     <address>
       <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
-        реки Карповки, 5, литера П.</p>
+        реки Карповки, 5, литера П.
+        <img src="images/icons/divider-yellow.svg" width="80" height="8" alt="#">
+      </p>
       <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
     </address>
     <ul class="navigation-menu menu-footer">
